# fastapi-crudrouter-v2

./: pyproject.toml
